# PyEFVLib

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_BRANCH.txt  TODO.txt  ToDo.txt  desktop.ini  install.sh  main.py  obs.txt  pyefvlib.sublime-project  setup.py  test.py  utils.py
GUI/: MSHWriter.py  a.msh  a.py  gui.py  gui2.py  heat_transfer.py  teemp.msh  temp.csv  test.py  test2.py
GUI/1sttry/: gui.py  kernel.py
GUI/a/: Script.json  properties.json
GridReader/: main.py  test.py
GridReader/config/: NumericalSettings.json  Script.json
GridReader/meshes/: Cube.geo  Cube.msh  QuadSquare.msh
PyEFVLib/: Boundary.py  BoundaryConditions.py  CsvSaver.py  Element.py  Facet.py  Grid.py  GridData.py  InnerFace.py  MSHReader.py  MeshioSaver.py  OuterFace.py  Point.py  ProblemData.py  Region.py  Shape.py  Solver.py  Vertex.py  VtmSaver.py  VtuSaver.py  XDMFReader.py  __init__.py  boundaryConditionPrinter.py
PyEFVLib/geometry/: Boundary.py  Element.py  Facet.py  Grid.py  GridData.py  InnerFace.py  MSHReader.py  OuterFace.py  Point.py  Shape.py  Vertex.py  XDMFReader.py
PyEFVLib/simulation/: BoundaryConditions.py  CgnsSaver.py  CsvSaver.py  HeatTransfer2D.py  LinearSystem.py  MeshioSaver.py  ProblemData.py  Saver.py  Solver.py  VtmSaver.py  VtuSaver.py  create  save
PyEFVLib/simulation/CGNS/: CMakeLists.txt  create.cpp  save.cpp
apps/: app_linear_system.py  app_reader.py  app_stencil.py  csv_to_cgns.py  example.py  example3d.py  fixed_stress.py  geomechanics.py  geomechanics_fixed_stress.py  geomechanics_fully_implicit.py  heat_transfer.py  heat_transfer_2d.py  heat_transfer_3d.py  heat_transfer_class.py  heat_transfer_csr.py  main.py  stress_equilibrium.py  stress_equilibrium2.py  stress_equilibrium_csr.py  tutorial.py  untitled.py  validate.py
apps/converters/: csv_msh_to_xdmf.py  csv_to_cgns.py  msh_to_vtk.py
apps/csr/: app_reader.py  app_stencil.py  heat_transfer_csr.py  stress_equilibrium_csr.py
benchmark/heat_transfer_2d/: NumericalSettings.json  Script.json  SolverSettings.json
config/: BoundaryConditions.json  NumericalSettings.json  PropertyData.json  Script.json
libs/geometry/: Boundary.py  Element.py  Facet.py  Grid.py  GridData.py  InnerFace.py  MSHReader.py  OuterFace.py  Point.py  Region.py  Shape.py  Vertex.py
libs/simulation/: BoundaryConditions.py  CgnsSaver  CgnsSaver.py  CgnsSaver2.py  HeatTransfer2D.py  LinearSystemAdders.py  ProblemData.py  ProblemData2D.py  Timer.py
libs/simulation/CGNS/: CMakeLists.txt  main.cpp
libs/simulation/CGNS/include/: CgnsOpener.hpp
libs/simulation/CGNS/source/: CgnsOpener.cpp
meshes/: 1d.msh  3x3 tri.msh  3x3.msh  8x8.msh  Box.geo  Box.msh  Fine.geo  Fine.msh  FineQuad.msh  MoreFine.msh  Results.cgns  Rip.geo  Rip.msh  Square.geo  Square.msh  blank.cgns  convert-2D-triangle-msh.py  polar.msh  rectangle 30x30.msh  rectangle.msh  test.msh  tiny.msh  truss.msh  truss2.msh  vug 15x15.msh  vug 30x30.msh
meshes/3DGeometries/: Pyrams.msh  Tetras.msh
meshes/cgns/: b.cgns  blank.cgns  switch.py
meshes/geo/: 1d.geo  column.geo  eight_sphere.geo  eight_sphere_fine.msh  new.geo  new.msh  truss.geo  truss2.geo  vug.geo
meshes/geos/: 1d.geo  MoreFine.geo  Prism.msh  dualRegion.geo  quads.msh  squares.msh  triangles.msh
meshes/msh/2D/: column.geo  (+15 more)
meshes/scripts/: cartesian.py  eight_sphere.py  strip_footing_mesh.py  uneq_strip_footing_x.py  uneq_strip_footing_xy.py
meshes/xdmf/: 3x3 tri.h5  3x3 tri.xdmf  3x3 tri_facets.h5  3x3 tri_facets.xdmf  3x3 tri_physical_region.h5  3x3 tri_physical_region.xdmf  3x3 tri_zone_list.xml  Square.h5  Square.xdmf  Square_facets.h5  Square_facets.xdmf  Square_physical_region.h5  Square_physical_region.xdmf  Square_zone_list.xml  Subdomains.h5  Subdomains.xdmf  Subdomains_facets.h5  Subdomains_facets.xdmf  Subdomains_physical_region.h5  Subdomains_physical_region.xdmf  Subdomains_zone_list.xml  dualRegion.h5  dualRegion.xdmf  dualRegion_facets.h5  dualRegion_facets.xdmf  dualRegion_physical_region.h5  dualRegion_physical_region.xdmf  dualRegion_zone_list.xml
old/sine_distribution/: NumericalSettings.json  Script.json
old/test/: pipe.geo  pipe.msh  properties.json
results/: R.cgns  Results.cgns  r.cgns  r1.cgns  rr.cgns
results/geomechanics/: 1_terzaghi_sg_dr.h5  1_terzaghi_sg_dr.xdmf  2_terzaghi_sg_dr_3D.xdmf  4_mandel.csv  4_mandel.h5  4_mandel.xdmf  Results.csv  Results.h5  Results.xdmf
results/gui/: Results.cgns  Results.csv  quad.csv  tri.csv
results/heat_transfer_2d/: Results.cgns  Results.csv
results/heat_transfer_3d/: HexasResults.cgns  PrismResults.cgns  PyramsResults.cgns  Results.cgns  TetrasResults.cgns
results/sine_distribution/: Results.cgns
results/stress_1d/: Results.cgns
results/stress_equilibrium/: Results.cgns  Results.csv
results/test_1d/: Results.cgns
workspace/: colorplot.py
workspace/b/: Script.json
workspace/geomechanics/: plot.py  reconstruction3.py
workspace/heat_transfer_1d/: Script.json  analyticalSolution.py
workspace/heat_transfer_2d/: NumericalSettings.json  Script.json  analyticalSolution.py  properties.json
workspace/heat_transfer_3d/: Script.json  properties.json
workspace/sine_distribution/: Script.json  analyticalSolution.py  properties.json
workspace/stress_1d/: properties.json
workspace/stress_equilibrium/: Script.json  properties.json
(+162 files in other folders)
